--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@types/react-dom": "16.8.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-actions-promise-wrapper": "^1.0.0",
+    "redux-saga": "^1.0.2",
     "typescript": "3.4.1"
   },
   "scripts": {
@@ -26,5 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/react-redux": "^7.0.6"
+  }
 }
