--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "redux-actions-promise-wrapper-usage-example",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://thu-san.github.io/redux-actions-promise-wrapper-usage-example",
   "dependencies": {
     "@types/jest": "24.0.11",
     "@types/node": "11.12.2",
     "@types/react": "16.8.10",
     "@types/react-dom": "16.8.3",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
@@ -17,6 +19,8 @@
     "typescript": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
